--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,10 +7,10 @@
 # set some variables that you'll need when you deploy
 variables:
   # the name of the service connection that you created above
-  serviceConnectionToAzure: name-of-your-service-connection
+  serviceConnectionToAzure: connection-to-my-app-rg
   # the name of your web app here is the same one you used above
   # when you created the web app using the Azure CLI
-  appName: my-app-name
+  appName: myapp-rg
 
 trigger:
 - master
